--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ repositories {
     mavenCentral()
 }
 
-dependencies {}
+dependencies {
+    testImplementation('org.junit.jupiter:junit-jupiter:6.0.3')
+}
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
