--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation('org.junit.jupiter:junit-jupiter:6.0.3')
+    testImplementation('com.codeborne:selenide:7.14.0',
+            'org.junit.jupiter:junit-jupiter:6.0.3')
 }
 
 tasks.withType(JavaCompile) {
